--- a/BasicJavaScriptProjects/Pizza_Project/Pizza_CSS/Pizza.css
+++ b/BasicJavaScriptProjects/Pizza_Project/Pizza_CSS/Pizza.css
@@ -26,22 +26,30 @@ font-family: Courier New, monospace;
 }
 
 #frmMenu {
-    width: 400px;
+    width: 600px;
     height: 200px;
 }
 
 #totalPrice {
     width: 200px;
     height: 190px;
-    margin: 0 auto;
+    margin: 20px auto;
     float: right;
 }
+
 
 .left {
     width: 200px;
     height: 200px;
     float: left;
 }
+
+.center {
+  width: 200px;
+  height: 200px;
+  float: left;
+}
+
 
 .right {
     width: 200px;
